# tests-flexcity-python

./: README.md
flexcity-app/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
flexcity-app/src/flexcity_app/: config.py  main.py  models.py
flexcity-app/src/flexcity_app/services/: activation.py
flexcity-app/tests/: assets_input.txt
flexcity-app/tests/services/: test_activation.py
flexcity_app_kotlin/: README.md  build.gradle.kts  requests.http  settings.gradle.kts
flexcity_app_kotlin/src/main/kotlin/com/flexcity/flexcity_app_kotlin/: ActivationBody.kt  ActivationController.kt  ActivationService.kt  Asset.kt  FlexcityAppKotlinApplication.kt
flexcity_app_kotlin/src/main/resources/: application.properties
flexcity_app_kotlin/src/test/kotlin/com/flexcity/flexcity_app_kotlin/: ActivationServiceTest.kt  FlexcityAppKotlinApplicationTests.kt
