[project]
name = "flexcity-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Grégory Le Clézio",email = "gregory_leclezio@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)"
]

[tool.poetry]
packages = [{include = "flexcity_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)"
]
